apps/monitoring/victoria-metrics/resources/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: victoria-metrics
  labels:
    app: victoria-metrics
spec:
  type: ClusterIP
  ports:
  - port: 8428
    targetPort: 8428
    name: http
  - port: 8089
    targetPort: 8089
    name: influx
  - port: 2003
    targetPort: 2003
    name: graphite
  - port: 4242
    targetPort: 4242
    name: opentsdb
  selector:
    app: victoria-metrics

---
apiVersion: v1
kind: Service
metadata:
  name: vmagent
  labels:
    app: vmagent
spec:
  type: ClusterIP
  ports:
  - port: 8429
    targetPort: 8429
    name: http
  selector:
    app: vmagent

---
apiVersion: v1
kind: Service
metadata:
  name: vmalert
  labels:
    app: vmalert
spec:
  type: ClusterIP
  ports:
  - port: 8880
    targetPort: 8880
    name: http
  selector:
    app: vmalert

---
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  labels:
    app: node-exporter
spec:
  type: ClusterIP
  ports:
  - port: 9100
    targetPort: 9100
    name: metrics
  selector:
    app: node-exporter
