apps/monitoring/victoria-metrics/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victoria-metrics-ingress
  labels:
    app: victoria-metrics
spec:
  ingressClassName: nginx
  rules:
    - host: victoria.beaver-cloud.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: victoria-metrics
                port:
                  number: 8428

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmagent-ingress
  labels:
    app: vmagent
spec:
  ingressClassName: nginx
  rules:
    - host: vmagent.beaver-cloud.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmagent
                port:
                  number: 8429

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmalert-ingress
  labels:
    app: vmalert
spec:
  ingressClassName: nginx
  rules:
    - host: vmalert.beaver-cloud.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmalert
                port:
                  number: 8880
